# paxbuild-recipes

./: .woodpecker.yml
oreon-11/acl/: acl.yaml
oreon-11/alsa/: alsa.yaml
oreon-11/alsa-lib/: alsa-lib.yaml
oreon-11/alsa-plugins/: alsa-plugins.yaml
oreon-11/alsa-utils/: alsa-utils.yaml
oreon-11/amd-ucode/: amd-ucode.yaml
oreon-11/amdgpu-pro/: amdgpu-pro.yaml
oreon-11/apache/: apache.yaml
oreon-11/apparmor/: apparmor.yaml
oreon-11/ark/: ark.yaml
oreon-11/attr/: attr.yaml
oreon-11/autoconf/: autoconf.yaml
oreon-11/automake/: automake.yaml
oreon-11/bash/: bash.yaml
oreon-11/bind/: bind.yaml
oreon-11/binutils/: binutils.yaml
oreon-11/blkid/: blkid.yaml
oreon-11/bluez/: bluez.yaml
oreon-11/bluez-utils/: bluez-utils.yaml
oreon-11/breeze/: breeze.yaml
oreon-11/breeze-gtk/: breeze-gtk.yaml
oreon-11/breeze-icons/: breeze-icons.yaml
oreon-11/btop/: btop.yaml
oreon-11/btrfs-progs/: btrfs-progs.yaml
oreon-11/busybox/: busybox.yaml
oreon-11/bzip2/: bzip2.yaml
oreon-11/bzip2-libs/: bzip2-libs.yaml
oreon-11/ca-certificates/: ca-certificates.yaml
oreon-11/cargo/: cargo.yaml
oreon-11/chmod/: chmod.yaml
oreon-11/chown/: chown.yaml
oreon-11/chromium/: chromium.yaml
oreon-11/chrony/: chrony.yaml
oreon-11/cloud-init/: cloud-init.yaml
oreon-11/cmake/: cmake.yaml
oreon-11/coreutils/: coreutils.yaml
oreon-11/cp/: cp.yaml
pax-builder/: Cargo.toml
pax-builder/src/: cli.rs  lib.rs  main.rs  obs_dashboard.rs  osad_dashboard.rs  version_checker.rs  worker.rs
pax-builder/src/static/: obs_public.html  osad_public.html
(+298 files in other folders)
